# SphereChargeProject

./: CMakeLists.txt
include/glad/: glad.h
lib/: glad.c
resources/shaders/: focus_fragment.glsl  focus_vertex.glsl  sphere_fragment.glsl  sphere_grid_fragment.glsl  sphere_grid_vertex.glsl  sphere_vertex.glsl
src/: ConsoleInput.cpp  ConsoleInput.h  InputDispatcher.h  ParrotDispatcher.cpp  ParrotDispatcher.h  Shader.cpp  main.cpp  util.h
src/graphics/: Camera.cpp  Camera.h  FocusRenderer.cpp  FocusRenderer.h  GLFWContext.cpp  GLFWContext.h  MainWindow.cpp  MainWindow.h  Mesh.h  OpenGLContext.cpp  OpenGLContext.h  RendererBase.h  Shader.cpp  Shader.h  SphereGridRenderer.cpp  SphereGridRenderer.h  SphereRenderer.cpp  SphereRenderer.h  Timer.cpp  Timer.h  WindowInputDispatcher.cpp  WindowInputDispatcher.h
src/objects/: ChargedSphere.cpp  ChargedSphere.h
